# TimeSpan

./: .gitignore  .pre-commit-config.yaml  .timespan_warp_integration.zsh  Cargo.toml  HOMEBREW.md  HOMEBREW_REPOSITORY_EXPLANATION.md  HOMEBREW_SIZE_OPTIMIZATION.md  HOMEBREW_TAP_TEST_SUCCESS.md  HOMEBREW_TEST_REPORT.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  WARP.md  email_consolidation.txt  git_integration_test.txt  git_test.txt  gpg_test.txt  install.sh  test_ts_integration.md
.github/: BRANCH_PROTECTION.md  README.md
.github/workflows/: ci.yml  pre-push.yml  security.yml
Formula/: timespan-binary.rb  timespan-binary.rb.example  timespan-local.rb  timespan-minimal.rb  timespan-optimized.rb  timespan.rb
features/: project_management.feature  reporting.feature  time_tracking.feature
scripts/: brew-release.sh  build-optimized.sh  generate-homebrew-sha.sh  install-global.sh  pre-commit.sh  sensitive-data-check.sh  setup-homebrew-tap.sh  setup-pre-commit.sh  test-homebrew-local.sh
src/: lib.rs  main.rs  security_tests.rs
src/cli/: mod.rs
src/models/: mod.rs
src/repository/: mod.rs
src/services/: client_discovery.rs  git_service.rs  mod.rs
tests/: sensitive_data_detection.rs
tests/integration/: cucumber.rs
