[package]
name = "timespan"
version = "1.1.0"
edition = "2021"
authors = ["Jin Wen <jin.wen@hisgarden.org>"]
description = "A local time tracking application built with Rust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
git2 = "0.18"
dirs = "5.0"

[dev-dependencies]
cucumber = "0.20"
tokio-test = "0.4"
tempfile = "3.8"
assert_matches = "1.5"
